# cmake-sonic

./: .gitignore  CMakeLists.txt  README  README.md  sonic  sonic.h  spectrogram.c
lib/fftw-3.3.8/: Makefile  config.h  config.status  libfftw3f.la  libtool
lib/fftw-3.3.8/.libs/: libfftw3f.lai
lib/fftw-3.3.8/api/: Makefile
lib/fftw-3.3.8/api/.deps/: apiplan.Plo  configure.Plo  execute-dft-c2r.Plo  execute-dft-r2c.Plo  execute-dft.Plo  execute-r2r.Plo  execute-split-dft-c2r.Plo  execute-split-dft-r2c.Plo  execute-split-dft.Plo  execute.Plo  export-wisdom-to-file.Plo  export-wisdom-to-string.Plo  export-wisdom.Plo  f77api.Plo  flops.Plo  forget-wisdom.Plo  import-system-wisdom.Plo  import-wisdom-from-file.Plo  import-wisdom-from-string.Plo  import-wisdom.Plo  malloc.Plo  map-r2r-kind.Plo  mapflags.Plo  mkprinter-file.Plo  mkprinter-str.Plo  mktensor-iodims.Plo  mktensor-iodims64.Plo  mktensor-rowmajor.Plo  plan-dft-1d.Plo  plan-dft-2d.Plo  plan-dft-3d.Plo  plan-dft-c2r-1d.Plo  plan-dft-c2r-2d.Plo  plan-dft-c2r-3d.Plo  plan-dft-c2r.Plo  plan-dft-r2c-1d.Plo  (+30 more)
lib/fftw-3.3.8/dft/: Makefile
lib/fftw-3.3.8/doc/: Makefile
lib/fftw-3.3.8/genfft/: Makefile
lib/fftw-3.3.8/kernel/: Makefile
lib/fftw-3.3.8/libbench2/: Makefile
lib/fftw-3.3.8/m4/: Makefile
lib/fftw-3.3.8/mpi/: Makefile
lib/fftw-3.3.8/rdft/: Makefile
lib/fftw-3.3.8/reodft/: Makefile
lib/fftw-3.3.8/simd-support/: Makefile
lib/fftw-3.3.8/support/: Makefile
lib/fftw-3.3.8/tests/: Makefile  bench
lib/fftw-3.3.8/threads/: Makefile
lib/fftw-3.3.8/tools/: Makefile  fftw-wisdom  fftwf-wisdom
(+623 files in other folders)
